# protein

./: .gitignore  AUTHORS  Makefile  README  README.md  autotools.sh  configure.in  index.html  params.json
include/protein/: dumping.hpp  filesystem.hpp  logging.hpp  types.hpp
src/: Makefile.am  dumping.cpp  filesystem.cpp  logging.cpp
